flapivor/tests/m3/hopix/typechecker/bad/73-while-01.hopix
val main : Int = while (true) { nothing }